# FEM

./: .gitignore  CMakeLists.txt  README
src/: CMakeLists.txt  ConnectivityMap_PYB11.py  LinearAlgebra_PYB11.py  boundary_conditions.py  coherence.cpp  connectivity.cpp  connectivity.py  fem.cpp  fem.py  fem_interface.py  fileIO.py  load_conditions.py  material.py  objReader.py  peanohilbert.py  physics.py  pybind11gen.py  quadMath.py  runScript.py  tensor_math.cpp  tensor_math.py  vector_math.cpp  vector_math.h  vector_math.py  vector_math_interface.cpp  vector_math_interface.py  vector_math_interface_old.py
tests/: libtest.py  tensor_test.py  test_import.py  vector_test.py
